--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 		<title>test</title>
 	</head>
 	<body>
-		<h2>hello world</h2>
+		<p>オンライン受講場所検索サイト</p>
+		<h2>【名称】</h2>
+		<br>
+		<button type="button">小平キャンパス周辺</button>
+		<button type="button">国分寺駅周辺</button>
+		<button type="button">新宿駅周辺</button>
 	</body>
 </html>
