--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 		<p>オンライン受講場所検索サイト</p>
 		<h2>【名称】</h2>
 		<br>
-		<button type="button">小平キャンパス周辺</button>
-		<button type="button">国分寺駅周辺</button>
-		<button type="button">新宿駅周辺</button>
+		<a href="" class="btn btn--circle"><i class="far fa-envelope">
+			</i><br>小平キャンパス<br>周辺<i class="fas fa-angle-down fa-position-bottom"></i></a>
+		<a href="" class="btn btn--circle"><i class="far fa-envelope">
+			</i><br>国分寺駅<br>周辺<i class="fas fa-angle-down fa-position-bottom"></i></a>
+		<a href="" class="btn btn--circle"><i class="far fa-envelope">
+			</i><br>新宿駅<br>周辺<i class="fas fa-angle-down fa-position-bottom"></i></a>
+		
 	</body>
 </html>
