--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<title>test</title>
 	</head>
 	<body>
-		<p>オンライン受講場所検索サイト</p>
-		<h2>【名称】</h2>
+		<h2>オンライン受講場所検索サイト</h2>
+		<h1>【名称】</h1>
 		<br>
 		<div align="center" class="btn btn--circle">
 		<a href="" class="btn btn--circle"><i class="far fa-envelope">
