--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h2>オンライン受講場所検索サイト</h2>
 		<h1>【名称】</h1>
 		<br>
-		<a href="" class="btn btn--circle"><i class="far fa-envelope">
+		<a href="./kodaira.html" class="btn btn--circle"><i class="far fa-envelope">
 			</i><br>小平キャンパス<br>周辺<i class="fas fa-angle-down fa-position-bottom"></i></a>
 		<a href="" class="btn btn--circle"><i class="far fa-envelope">
 			</i><br>国分寺駅<br>周辺<i class="fas fa-angle-down fa-position-bottom"></i></a>
