--- a/kodaira.html
+++ b/kodaira.html
@@ -6,8 +6,21 @@
     <title>kodaira</title>
   </head>
   <body>
-    <h1>小平キャンパス周辺</h1>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3239.1658580966473!2d139.46428675049165!3d35.72213928008761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1634181119847!5m2!1sja!2sjp" width="1000" height="677" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    
+    <div id="map" style="width:620px; height:400px"></div>
 
+    <script type="text/javascript">
+    function initMap() {
+      var opts = {
+        zoom: 15,
+        center: new google.maps.LatLng(35.709984,139.810703)
+      };
+      var map = new google.maps.Map(document.getElementById("map"), opts);
+    }
+    </script>
+
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiV2ZbFIYuD3N4hzGLstSn2e4ZG5A7QlU&callback=initMap">
+    </script>
   </body>
 </html>
