--- a/kodaira.html
+++ b/kodaira.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     
+    <h1>小平キャンパス周辺</h1>
     <div id="map" style="width:620px; height:400px"></div>
 
     <script type="text/javascript">
