--- a/kodaira.html
+++ b/kodaira.html
@@ -6,22 +6,23 @@
     <title>kodaira</title>
   </head>
   <body>
-    
-    <h1>小平キャンパス周辺</h1>
-    <div id="map" style="width:620px; height:400px"></div>
+    <center>
+      <h1>小平キャンパス周辺</h1>
+      <div id="map" style="width:620px; height:400px"></div>
 
-    <script type="text/javascript">
-    function initMap() {
-      var opts = {
-        zoom: 15,
-        center: new google.maps.LatLng(35.709984,139.810703)
-      };
-      var map = new google.maps.Map(document.getElementById("map"), opts);
-    }
-    </script>
+      <script type="text/javascript">
+      function initMap() {
+        var opts = {
+          zoom: 15,
+          center: new google.maps.LatLng(35.709984,139.810703)
+        };
+        var map = new google.maps.Map(document.getElementById("map"), opts);
+      }
+      </script>
 
-    <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiV2ZbFIYuD3N4hzGLstSn2e4ZG5A7QlU&callback=initMap">
-    </script>
+      <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiV2ZbFIYuD3N4hzGLstSn2e4ZG5A7QlU&callback=initMap">
+      </script>
+     <center>
   </body>
 </html>
