--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 			<br>
 			<a href="./kodaira.html" class="btn btn--circle"><i class="far fa-envelope">
 				</i><br>小平キャンパス<br>周辺<i class="fas fa-angle-down fa-position-bottom"></i></a>
-			<a href="" class="btn btn--circle"><i class="far fa-envelope">
+			<a href="./kokubunji.html" class="btn btn--circle"><i class="far fa-envelope">
 				</i><br>国分寺駅<br>周辺<i class="fas fa-angle-down fa-position-bottom"></i></a>
-			<a href="" class="btn btn--circle"><i class="far fa-envelope">
+			<a href="shinjuku.html" class="btn btn--circle"><i class="far fa-envelope">
 				</i><br>新宿駅<br>周辺<i class="fas fa-angle-down fa-position-bottom"></i></a>
 		<center>
 	</body>
