--- a/kodaira.html
+++ b/kodaira.html
@@ -14,7 +14,7 @@
       function initMap() {
         var opts = {
           zoom: 15,
-          center: new google.maps.LatLng(35.709984,139.810703)
+          center: new google.maps.LatLng(35.72205905984383,139.4664825141516)
         };
         var map = new google.maps.Map(document.getElementById("map"), opts);
       }
