--- a/kokubunji.html
+++ b/kokubunji.html
@@ -14,7 +14,7 @@
       function initMap() {
         var opts = {
           zoom: 15,
-          center: new google.maps.LatLng(35.709984,139.810703)
+          center: new google.maps.LatLng(35.70091994810423,139.48169230841705)
         };
         var map = new google.maps.Map(document.getElementById("map"), opts);
       }
