--- a/kodaira.html
+++ b/kodaira.html
@@ -3,26 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" >
-    <title>kodaira</title>
+    <title>小平</title>
   </head>
   <body>
     <center>
       <h1>小平キャンパス周辺</h1>
       <div id="map" style="width:620px; height:400px"></div>
 
-      <script type="text/javascript">
-      function initMap() {
-        var opts = {
-          zoom: 15,
-          center: new google.maps.LatLng(35.72205905984383,139.4664825141516)
-        };
-        var map = new google.maps.Map(document.getElementById("map"), opts);
-      }
-      </script>
-
-      <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAiV2ZbFIYuD3N4hzGLstSn2e4ZG5A7QlU&callback=initMap">
+     <script type="text/javascript" src="./kodaira_map.js"></script>
+        
+    <script src="https://maps.googleapis.com/maps/api/js?language=ja&region=JP&key=AIzaSyAiV2ZbFIYuD3N4hzGLstSn2e4ZG5A7QlU&callback=initMap&libraries=places" async defer></script>
       </script>
      <center>
   </body>
 </html>
+
