--- a/kodaira.html
+++ b/kodaira.html
@@ -14,6 +14,11 @@
         
     <script src="https://maps.googleapis.com/maps/api/js?language=ja&region=JP&key=AIzaSyAiV2ZbFIYuD3N4hzGLstSn2e4ZG5A7QlU&callback=initMap&libraries=places" async defer></script>
       </script>
+    <br>
+    <br>
+    <label>
+      <input type="checkbox",name="search",value="konsento">コンセント
+    </label>
      <center>
   </body>
 </html>
