--- a/kodaira.html
+++ b/kodaira.html
@@ -14,12 +14,22 @@
         
       <script src="https://maps.googleapis.com/maps/api/js?language=ja&region=JP&key=AIzaSyAiV2ZbFIYuD3N4hzGLstSn2e4ZG5A7QlU&callback=initMap&libraries=places" async defer></script>
       </script>
+      <br>
+      <br>
+      <h3>絞り込み条件</h3>
+      <br> 
+      <p>コンセントの有無</p>
+      <label>
+      <input type="checkbox",name="search",value="konsento">有り
+      <input type="checkbox",name="search",value="konsento">無し
+      </label>
+    　　　　<p>現在地からの距離</p>
+      <label>
+      <input type="checkbox",name="search",value="konsento">500M以内
+      <input type="checkbox",name="search",value="konsento">1KM以内
+      <input type="checkbox",name="search",value="konsento">2KM以内
+      </label>
     <center>
-    <br>
-    <br>
-    <label>
-    <input type="checkbox",name="search",value="konsento">コンセント
-    </label>
   </body>
 </html>
 
