--- a/kodaira.html
+++ b/kodaira.html
@@ -20,14 +20,19 @@
       <br> 
       <p>コンセントの有無</p>
       <label>
-      <input type="checkbox",name="search",value="konsento">有り
-      <input type="checkbox",name="search",value="konsento">無し
+      <input type="checkbox",name="search",value="konsento">コンセント有り
+      <input type="checkbox",name="search",value="konsento">コンセント無し
       </label>
     　　　　<p>現在地からの距離</p>
       <label>
       <input type="checkbox",name="search",value="konsento">500M以内
       <input type="checkbox",name="search",value="konsento">1KM以内
       <input type="checkbox",name="search",value="konsento">2KM以内
+      </label>
+      <p>個室の有無</p>
+      <label>
+      <input type="checkbox",name="search",value="konsento">個室あり
+      <input type="checkbox",name="search",value="konsento">個室なし
       </label>
     <center>
   </body>
