--- a/kodaira.html
+++ b/kodaira.html
@@ -14,6 +14,7 @@
         
       <script src="https://maps.googleapis.com/maps/api/js?language=ja&region=JP&key=AIzaSyAiV2ZbFIYuD3N4hzGLstSn2e4ZG5A7QlU&callback=initMap&libraries=places" async defer></script>
       </script>
+    </center>
       <br>
       <br>
       <h3>絞り込み条件</h3>
@@ -34,7 +35,6 @@
       <input type="checkbox",name="search",value="konsento">個室あり
       <input type="checkbox",name="search",value="konsento">個室なし
       </label>
-    <center>
   </body>
 </html>
 
