--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="style.css" >
+		<link rel="stylesheet" href="style_index.css" >
 		<title>test</title>
 	</head>
 	<body>
