--- a/kodaira.html
+++ b/kodaira.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="style_kodaira.css" >
     <title>小平</title>
   </head>
   <body>
