--- a/kodaira.html
+++ b/kodaira.html
@@ -35,6 +35,19 @@
       <input type="checkbox",name="search",value="konsento">個室あり
       <input type="checkbox",name="search",value="konsento">個室なし
       </label>
+      <p>お店の種類</p>
+      <label>
+      <input type="checkbox",name="search",value="konsento">カフェ
+      <input type="checkbox",name="search",value="konsento">ファミレス
+      <input type="checkbox",name="search",value="konsento">ネットカフェ
+      <input type="checkbox",name="search",value="konsento">カラオケ
+      </label>
+      <p>価格帯</p>
+      <label>
+      <input type="checkbox",name="search",value="konsento">~1000円
+      <input type="checkbox",name="search",value="konsento">~2000円
+      <input type="checkbox",name="search",value="konsento">~3000円
+      </label>
   </body>
 </html>
 
