--- a/index.html
+++ b/index.html
@@ -6,16 +6,23 @@
 		<title>test</title>
 	</head>
 	<body>
-		<center>
-			<h2>オンライン受講場所検索サイト</h2>
-			<h1>【名称】</h1>
-			<br>
-			<a href="./kodaira.html" class="btn btn--circle"><i class="far fa-envelope">
-				</i><br>小平キャンパス<br>周辺<i class="fas fa-angle-down fa-position-bottom"></i></a>
-			<a href="./kokubunji.html" class="btn btn--circle"><i class="far fa-envelope">
-				</i><br>国分寺駅<br>周辺<i class="fas fa-angle-down fa-position-bottom"></i></a>
-			<a href="shinjuku.html" class="btn btn--circle"><i class="far fa-envelope">
-				</i><br>新宿駅<br>周辺<i class="fas fa-angle-down fa-position-bottom"></i></a>
-		<center>
+		<header class="site-header">
+			<h1 class="site-logo"><img src="" alt="WEBDESIGNDAY"></h1>
+   			<nav class="gnav">
+        			<ul class="gnav__menu">
+           			<li class="gnav__menu__item"><a href="">About</a></li>
+        			<li class="gnav__menu__item"><a href="">Works</a></li>
+				<li class="gnav__menu__item"><a href="">Recruit</a></li>
+            			<li class="gnav__menu__item"><a href="">News</a></li>
+            			<li class="gnav__menu__item"><a href="">Contact</a></li>
+        			</ul>
+    			</nav>
+		</header>
+		<div class="hero"><img src="images/hero.jpg" alt="hero"></div>
+		<div class="content">
+		</div>
+		<footer class="site-footer">
+    		<p class="copyright">@2017 WEBDESIGNDAY</p>
+		</footer>
 	</body>
 </html>
