--- a/index.html
+++ b/index.html
@@ -7,22 +7,15 @@
 	</head>
 	<body>
 		<header class="site-header">
-			<h1 class="site-logo"><img src="3388477_l.jpg" alt="WEBDESIGNDAY"></h1>
+			<h1 class="site-logo"><img alt="受講場所サーチシステム"></h1>
    			<nav class="gnav">
         			<ul class="gnav__menu">
-           			<li class="gnav__menu__item"><a href="">About</a></li>
-        			<li class="gnav__menu__item"><a href="">Works</a></li>
-				<li class="gnav__menu__item"><a href="">Recruit</a></li>
-            			<li class="gnav__menu__item"><a href="">News</a></li>
-            			<li class="gnav__menu__item"><a href="">Contact</a></li>
+           			<li class="gnav__menu__item"><a href="">小平キャンパス</a></li>
+        			<li class="gnav__menu__item"><a href="">国分寺駅</a></li>
+				<li class="gnav__menu__item"><a href="">新宿駅</a></li>
         			</ul>
     			</nav>
 		</header>
-		<div class="hero"><img src="images/hero.jpg" alt="hero"></div>
-		<div class="content">
-		</div>
-		<footer class="site-footer">
-    		<p class="copyright">@2017 WEBDESIGNDAY</p>
-		</footer>
+		<div class="hero"><img src="3388477_l.jpg" alt="hero"></div>
 	</body>
 </html>
