--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 			<h1 class="site-logo"><img alt="受講場所サーチシステム"></h1>
    			<nav class="gnav">
         			<ul class="gnav__menu">
-           			<li class="gnav__menu__item"><a href="">小平キャンパス</a></li>
-        			<li class="gnav__menu__item"><a href="">国分寺駅</a></li>
-				<li class="gnav__menu__item"><a href="">新宿駅</a></li>
+           			<li class="gnav__menu__item"><a href="./kodaira.html">小平キャンパス</a></li>
+        			<li class="gnav__menu__item"><a href="./kokubunji.html">国分寺駅</a></li>
+				<li class="gnav__menu__item"><a href="./shinjuku.html">新宿駅</a></li>
         			</ul>
     			</nav>
 		</header>
