--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header class="site-header">
-			<h1 class="site-logo"><img alt="受講場所サーチシステム"></h1>
+			<h1>受講場所サーチシステム</h1>
    			<nav class="gnav">
         			<ul class="gnav__menu">
            			<li class="gnav__menu__item"><a href="./kodaira.html">小平キャンパス</a></li>
