--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         			</ul>
     			</nav>
 		</header>
-		<div class="hero"><img src="3388477_l.jpg" alt="hero"></div>
+		<div class="pc"><img src="3388477_l.jpg" alt="pc"></div>
 	</body>
 </html>
