--- a/kokubunji.html
+++ b/kokubunji.html
@@ -11,6 +11,7 @@
       <div id="map" style="width:620px; height:400px"></div>
 
       <script type="text/javascript" src="./kokubunji_map.js"></script>
+      <script type="text/javascript" src="./shop_list/kokubunji_cafe.js"></script>
         
       <script src="https://maps.googleapis.com/maps/api/js?language=ja&region=JP&key=AIzaSyAiV2ZbFIYuD3N4hzGLstSn2e4ZG5A7QlU&callback=initMap&libraries=places" async defer></script>
       </script>
