--- a/kodaira.html
+++ b/kodaira.html
@@ -16,8 +16,10 @@
       <script src="https://maps.googleapis.com/maps/api/js?language=ja&region=JP&key=AIzaSyAiV2ZbFIYuD3N4hzGLstSn2e4ZG5A7QlU&callback=initMap&libraries=places" async defer></script>
       </script>
     
-      <br>
-      <br>
+      <br><br>
+      <button onclick="location.href='kuchikomikodaira.html'">周辺情報掲示板</button>
+    
+      <br><br>
       <h3>絞り込み条件</h3>
       <br> 
       <p>コンセントの有無</p>
