--- a/kodaira.html
+++ b/kodaira.html
@@ -25,31 +25,31 @@
       <p>コンセントの有無</p>
       <label>
       <input type="checkbox",name="search",value="konsento">コンセント有り
-      <input type="checkbox",name="search",value="konsento">コンセント無し
+      /*<input type="checkbox",name="search",value="konsento">コンセント無し*/
       </label>
     　　　　<p>現在地からの距離</p>
       <label>
-      <input type="checkbox",name="search",value="konsento">500M以内
-      <input type="checkbox",name="search",value="konsento">1KM以内
-      <input type="checkbox",name="search",value="konsento">2KM以内
+      <input type="checkbox",name="search",value="500m">500M以内
+      <input type="checkbox",name="search",value="1km">1KM以内
+      <input type="checkbox",name="search",value="2km">2KM以内
       </label>
       <p>個室の有無</p>
       <label>
-      <input type="checkbox",name="search",value="konsento">個室あり
-      <input type="checkbox",name="search",value="konsento">個室なし
+      <input type="checkbox",name="search",value="koshitsu">個室あり
+      /*<input type="checkbox",name="search",value="konsento">個室なし*/
       </label>
       <p>お店の種類</p>
       <label>
-      <input type="checkbox",name="search",value="konsento">カフェ
-      <input type="checkbox",name="search",value="konsento">ファミレス
-      <input type="checkbox",name="search",value="konsento">ネットカフェ
-      <input type="checkbox",name="search",value="konsento">カラオケ
+      <input type="checkbox",name="search",value="cafe">カフェ
+      <input type="checkbox",name="search",value="famires">ファミレス
+      <input type="checkbox",name="search",value="netcafe">ネットカフェ
+      <input type="checkbox",name="search",value="karaoke">カラオケ
       </label>
       <p>価格帯</p>
       <label>
-      <input type="checkbox",name="search",value="konsento">~1000円
-      <input type="checkbox",name="search",value="konsento">~2000円
-      <input type="checkbox",name="search",value="konsento">~3000円
+      <input type="checkbox",name="search",value="1000">~1000円
+      <input type="checkbox",name="search",value="2000">~2000円
+      <input type="checkbox",name="search",value="3000">~3000円
       </label>
     </center>
   </body>
