--- a/kodaira.html
+++ b/kodaira.html
@@ -45,9 +45,9 @@
       </label>
       <p>価格帯</p>
       <label>
-      <input type="checkbox",name="search",value="1000">~1000円
-      <input type="checkbox",name="search",value="2000">~2000円
-      <input type="checkbox",name="search",value="3000">~3000円
+      <input type="checkbox",name="search",value="1000">1000円以内
+      <input type="checkbox",name="search",value="2000">2000円以内
+      <input type="checkbox",name="search",value="3000">3000円以内
       </label>
     </center>
   </body>
