--- a/kodaira.html
+++ b/kodaira.html
@@ -23,32 +23,22 @@
       <h3>絞り込み条件</h3>
       <br> 
       <p>コンセントの有無</p>
-      <label>
-      <input type="checkbox",name="konsento",value="konsento">コンセント有り
-      </label>
+      <label><input type="checkbox",name="konsento",value="konsento">コンセント有り</label>
     　　　　<p>現在地からの距離</p>
-      <label>
-      <input type="checkbox",name="500m",value="500m">500M以内
-      <input type="checkbox",name="1km",value="1km">1KM以内
-      <input type="checkbox",name="2km",value="2km">2KM以内
-      </label>
+      <label><input type="checkbox",name="500m",value="500m">500M以内</label>
+      <label><input type="checkbox",name="1km",value="1km">1KM以内</label>
+      <label><input type="checkbox",name="2km",value="2km">2KM以内</label>
       <p>個室の有無</p>
-      <label>
-      <input type="checkbox",name="koshitsu",value="koshitsu">個室あり
-      </label>
+      <label><input type="checkbox",name="koshitsu",value="koshitsu">個室あり</label>
       <p>お店の種類</p>
-      <label>
-      <input type="checkbox",name="cafe",value="cafe">カフェ
-      <input type="checkbox",name="famires",value="famires">ファミレス
-      <input type="checkbox",name="netcafe",value="netcafe">ネットカフェ
-      <input type="checkbox",name="karaoke",value="karaoke">カラオケ
-      </label>
+      <label><input type="checkbox",name="cafe",value="cafe">カフェ</label>
+      <label><input type="checkbox",name="famires",value="famires">ファミレス</label>
+      <label><input type="checkbox",name="netcafe",value="netcafe">ネットカフェ</label>
+      <label><input type="checkbox",name="karaoke",value="karaoke">カラオケ</label>
       <p>価格帯</p>
-      <label>
-      <input type="checkbox",name="1000",value="1000">1000円以内
-      <input type="checkbox",name="2000",value="2000">2000円以内
-      <input type="checkbox",name="3000",value="3000">3000円以内
-      </label>
+      <label><input type="checkbox",name="1000",value="1000">1000円以内</label>
+      <label><input type="checkbox",name="2000",value="2000">2000円以内</label>
+      <label><input type="checkbox",name="3000",value="3000">3000円以内</label>
     </center>
   </body>
 </html>
