--- a/kodaira.html
+++ b/kodaira.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <center>
+      <button onclick="location.href='index.html'">ホーム</button>
+      <button onclick="location.href='kokubunji.html'">国分寺駅周辺</button>
+      <button onclick="location.href='shinjuku.html'">新宿駅周辺</button>
+      
       <h1>小平キャンパス周辺</h1>
       <div id="map" style="width:620px; height:400px"></div>
 
