--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="style_index.css" >
-		<title>test</title>
+		<title>home</title>
 	</head>
 	<body>
 		<header class="site-header">
