--- a/kodaira.html
+++ b/kodaira.html
@@ -29,9 +29,9 @@
       <p>コンセントの有無</p>
       <label><input type="checkbox",name="konsento",value="konsento">コンセント有り</label>
     　　　　<p>現在地からの距離</p>
-      <label><input type="checkbox",name="500m",value="500m">500M以内</label>
-      <label><input type="checkbox",name="1km",value="1km">1KM以内</label>
-      <label><input type="checkbox",name="2km",value="2km">2KM以内</label>
+      <label><input type="checkbox",name="500m",value="500m",checked>500M以内</label>
+      <label><input type="checkbox",name="1km",value="1km",checked>1KM以内</label>
+      <label><input type="checkbox",name="2km",value="2km",checked>2KM以内</label>
       <p>個室の有無</p>
       <label><input type="checkbox",name="koshitsu",value="koshitsu">個室あり</label>
       <p>お店の種類</p>
