--- a/kodaira.html
+++ b/kodaira.html
@@ -35,14 +35,14 @@
       <p>個室の有無</p>
       <label><input type="checkbox",name="koshitsu",value="koshitsu">個室あり</label>
       <p>お店の種類</p>
-      <label><input type="checkbox",name="cafe",value="cafe">カフェ</label>
-      <label><input type="checkbox",name="famires",value="famires">ファミレス</label>
-      <label><input type="checkbox",name="netcafe",value="netcafe">ネットカフェ</label>
-      <label><input type="checkbox",name="karaoke",value="karaoke">カラオケ</label>
+      <label><input type="checkbox",name="cafe",value="cafe",checked>カフェ</label>
+      <label><input type="checkbox",name="famires",value="famires",checked>ファミレス</label>
+      <label><input type="checkbox",name="netcafe",value="netcafe",checked>ネットカフェ</label>
+      <label><input type="checkbox",name="karaoke",value="karaoke",checked>カラオケ</label>
       <p>価格帯</p>
-      <label><input type="checkbox",name="1000",value="1000">1000円以内</label>
-      <label><input type="checkbox",name="2000",value="2000">2000円以内</label>
-      <label><input type="checkbox",name="3000",value="3000">3000円以内</label>
+      <label><input type="checkbox",name="1000",value="1000",checked>1000円以内</label>
+      <label><input type="checkbox",name="2000",value="2000",checked>2000円以内</label>
+      <label><input type="checkbox",name="3000",value="3000",checked>3000円以内</label>
     </center>
   </body>
 </html>
