--- a/kodaira.html
+++ b/kodaira.html
@@ -27,13 +27,13 @@
       <h3>絞り込み条件</h3>
       <br> 
       <p>コンセントの有無</p>
-      <label><input type="checkbox",name="konsento",value="konsento">コンセント有り</label>
+      <input id="sample1" value="1" type="checkbox" onclick="konsento1();" checked><label for="sample1">コンセント有</label>
     　　　　<p>現在地からの距離</p>
-      <label><input type="checkbox",name="500m",value="500m",checked>500M以内</label>
-      <label><input type="checkbox",name="1km",value="1km",checked>1KM以内</label>
-      <label><input type="checkbox",name="2km",value="2km",checked>2KM以内</label>
+      <input id="sample2" value="1" type="checkbox" onclick="t500m();" checked><label for="sample2">500M以内</label>
+      <input id="sample3" value="1" type="checkbox" onclick="t1km();" checked><label for="sample3">1KM以内</label>
+      <input id="sample4" value="1" type="checkbox" onclick="t2km();" checked><label for="sample4">2KM以内</label>
       <p>個室の有無</p>
-      <label><input type="checkbox",name="koshitsu",value="koshitsu">個室あり</label>
+      <input id="sample5" value="1" type="checkbox" onclick="koshitsu1();" checked><label for="sample5">6〜7万</label>
       <p>お店の種類</p>
       <label><input type="checkbox",name="cafe",value="cafe",checked>カフェ</label>
       <label><input type="checkbox",name="famires",value="famires",checked>ファミレス</label>
