--- a/kodaira.html
+++ b/kodaira.html
@@ -35,14 +35,14 @@
       <p>個室の有無</p>
       <input id="sample5" value="1" type="checkbox" onclick="koshitsu1();" checked><label for="sample5">個室有り</label>
       <p>お店の種類</p>
-      <label><input type="checkbox",name="cafe",value="cafe",checked>カフェ</label>
-      <label><input type="checkbox",name="famires",value="famires",checked>ファミレス</label>
-      <label><input type="checkbox",name="netcafe",value="netcafe",checked>ネットカフェ</label>
-      <label><input type="checkbox",name="karaoke",value="karaoke",checked>カラオケ</label>
+      <input id="sample6" value="1" type="checkbox" onclick="cafe1();" checked><label for="sample6">カフェ</label>
+      <input id="sample7" value="1" type="checkbox" onclick="famires1();" checked><label for="sample7">ファミレス</label>
+      <input id="sample8" value="1" type="checkbox" onclick="netcafe1();" checked><label for="sample8">ネットカフェ</label>
+      <input id="sample9" value="1" type="checkbox" onclick="karaoke1();" checked><label for="sample9">カラオケ</label>
       <p>価格帯</p>
-      <label><input type="checkbox",name="1000",value="1000",checked>1000円以内</label>
-      <label><input type="checkbox",name="2000",value="2000",checked>2000円以内</label>
-      <label><input type="checkbox",name="3000",value="3000",checked>3000円以内</label>
+      <input id="sample11" value="1" type="checkbox" onclick="level2();" checked><label for="sample11">普通</label>
+      <input id="sample12" value="1" type="checkbox" onclick="level3();" checked><label for="sample12">少し高め</label>
+      <input id="sample13" value="1" type="checkbox" onclick="others();" checked><label for="sample13">その他</label>
     </center>
   </body>
 </html>
