--- a/kodaira.html
+++ b/kodaira.html
@@ -23,6 +23,8 @@
       <br><br>
       <button onclick="location.href='kuchikomikodaira.html'">周辺情報掲示板</button>
     
+    </center>
+    <div align="center">
       <br><br>
       <h3>絞り込み条件</h3>
       <br> 
@@ -43,7 +45,7 @@
       <input id="sample11" value="1" type="checkbox" onclick="level2();" checked><label for="sample11">普通</label>
       <input id="sample12" value="1" type="checkbox" onclick="level3();" checked><label for="sample12">少し高め</label>
       <input id="sample13" value="1" type="checkbox" onclick="others();" checked><label for="sample13">その他</label>
-    </center>
+    </div>
   </body>
 </html>
 
