--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         		</ul>
     		</nav>
 		</header>
-		<div class="hero"><img src="images/hero.jpg" alt="hero"></div>
+		<div class="hero"><img src="i" alt="hero"></div>
 		<div class="content">
 		</div>
 		<footer class="site-footer">
