--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     		<h1 class="site-logo"><img src="images/logo.png" alt="WEBDESIGNDAY"></h1>
     		<nav class="gnav">
         		<ul class="gnav__menu">
-            		<li class="gnav__menu__item"><a href="">About</a></li>
-            		<li class="gnav__menu__item"><a href="">Works</a></li>
-            		<li class="gnav__menu__item"><a href="">Recruit</a></li>
+            		<li class="gnav__menu__item"><a href="kodaira.html">小平キャンパス</a></li>
+            		<li class="gnav__menu__item"><a href="kokubunji.html">国分寺駅</a></li>
+            		<li class="gnav__menu__item"><a href="shinjuku.html">新宿駅</a></li>
            		 <li class="gnav__menu__item"><a href="">News</a></li>
             		<li class="gnav__menu__item"><a href="">Contact</a></li>
         		</ul>
     		</nav>
 		</header>
-		<div class="hero"><img src="i" alt="hero"></div>
+		<div class="hero"><img src="3388477_l.jpg" alt="hero"></div>
 		<div class="content">
 		</div>
 		<footer class="site-footer">
