--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             		<li class="gnav__menu__item"><a href="kodaira.html">小平キャンパス</a></li>
             		<li class="gnav__menu__item"><a href="kokubunji.html">国分寺駅</a></li>
             		<li class="gnav__menu__item"><a href="shinjuku.html">新宿駅</a></li>
-           		 <li class="gnav__menu__item"><a href="">News</a></li>
+           		<li class="gnav__menu__item"><a href="">News</a></li>
             		<li class="gnav__menu__item"><a href="">Contact</a></li>
         		</ul>
     		</nav>
@@ -22,7 +22,7 @@
 		<div class="content">
 		</div>
 		<footer class="site-footer">
-    		<p class="copyright">@2017 WEBDESIGNDAY</p>
+    		<p class="copyright">@2021 kishi_4seminar</p>
 		</footer>
  
 	</body>
