--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header class="site-header">
-    		<h1 class="site-logo"><img src="images/logo.png" alt="WEBDESIGNDAY"></h1>
+    		<h1 class="site-logo"><img src="images/logo.png" alt="つだマップ"></h1>
     		<nav class="gnav">
         		<ul class="gnav__menu">
             		<li class="gnav__menu__item"><a href="kodaira.html">小平キャンパス</a></li>
