--- a/kodaira.html
+++ b/kodaira.html
@@ -27,26 +27,38 @@
     <div align="center">
       <br><br>
       <h3>絞り込み条件</h3>
+      <br>
+      <input type="button" onClick="checkAll()" value="このボタンを押すと全選択されます">
+      <br>
       <p>コンセントの有無</p>
-      <input id="sample1" value="1" type="checkbox" onclick="konsento1();" checked><label for="sample1">コンセントあり</label>
-      <input id="sample2" value="1" type="checkbox" onclick="konsento2();" checked><label for="sample2">コンセントなし</label>
+      <input id="sample1" value="1" name="kodaira" type="checkbox" onclick="konsento1();" checked><label for="sample1">コンセントあり</label>
+      <input id="sample2" value="1" name="kodaira" type="checkbox" onclick="konsento2();" checked><label for="sample2">コンセントなし</label>
       <p>現在地からの距離</p>
-      <input id="sample3" value="1" type="checkbox" onclick="t500m();" checked><label for="sample3">500M以内</label>
-      <input id="sample4" value="1" type="checkbox" onclick="t1km();" checked><label for="sample4">1KM以内</label>
-      <input id="sample5" value="1" type="checkbox" onclick="t2km();" checked><label for="sample5">2KM以内</label>
+      <input id="sample3" value="1" name="kodaira" type="checkbox" onclick="t500m();" checked><label for="sample3">500M以内</label>
+      <input id="sample4" value="1" name="kodaira" type="checkbox" onclick="t1km();" checked><label for="sample4">1KM以内</label>
+      <input id="sample5" value="1" name="kodaira" type="checkbox" onclick="t2km();" checked><label for="sample5">2KM以内</label>
       <p>個室の有無</p>
-      <input id="sample6" value="1" type="checkbox" onclick="koshitsu1();" checked><label for="sample6">個室あり</label>
-      <input id="sample7" value="1" type="checkbox" onclick="koshitsu2();" checked><label for="sample7">個室なし</label>
+      <input id="sample6" value="1" name="kodaira" type="checkbox" onclick="koshitsu1();" checked><label for="sample6">個室あり</label>
+      <input id="sample7" value="1" name="kodaira" type="checkbox" onclick="koshitsu2();" checked><label for="sample7">個室なし</label>
       <p>お店の種類</p>
-      <input id="sample8" value="1" type="checkbox" onclick="cafe1();" checked><label for="sample8">カフェ</label>
-      <input id="sample9" value="1" type="checkbox" onclick="famires1();" checked><label for="sample9">ファミレス</label>
-      <input id="sample10" value="1" type="checkbox" onclick="netcafe1();" checked><label for="sample10">ネットカフェ</label>
-      <input id="sample11" value="1" type="checkbox" onclick="karaoke1();" checked><label for="sample11">カラオケ</label>
+      <input id="sample8" value="1" name="kodaira" type="checkbox" onclick="cafe1();" checked><label for="sample8">カフェ</label>
+      <input id="sample9" value="1" name="kodaira" type="checkbox" onclick="famires1();" checked><label for="sample9">ファミレス</label>
+      <input id="sample10" value="1" name="kodaira" type="checkbox" onclick="netcafe1();" checked><label for="sample10">ネットカフェ</label>
+      <input id="sample11" value="1" name="kodaira" type="checkbox" onclick="karaoke1();" checked><label for="sample11">カラオケ</label>
       <p>価格帯</p>
-      <input id="sample12" value="1" type="checkbox" onclick="level2();" checked><label for="sample12">普通</label>
-      <input id="sample13" value="1" type="checkbox" onclick="level3();" checked><label for="sample13">少し高め</label>
-      <input id="sample14" value="1" type="checkbox" onclick="others();" checked><label for="sample14">その他</label>
+      <input id="sample12" value="1" name="kodaira" type="checkbox" onclick="level2();" checked><label for="sample12">普通</label>
+      <input id="sample13" value="1" name="kodaira" type="checkbox" onclick="level3();" checked><label for="sample13">少し高め</label>
+      <input id="sample14" value="1" name="kodaira" type="checkbox" onclick="others();" checked><label for="sample14">その他</label>
     </div>
+    <script>
+        const checkbox1 = document.getElementsByName("kodaira")
+
+        function checkAll() {
+          for(i = 0; i < checkbox1.length; i++) {
+            checkbox1[i].checked = true
+          }
+        }
+     </script>
   </body>
 </html>
 
