--- a/shinjuku.html
+++ b/shinjuku.html
@@ -23,7 +23,42 @@
       <br><br>
       <button onclick="location.href='kuchikomishinjuku.html'">周辺情報掲示板</button>
     </center>
-  
+    <div align="center">
+      <br><br>
+      <h3>絞り込み条件</h3>
+      <br>
+      <input type="button" onClick="checkAllBox(true)" value="このボタンを押すと全選択されます">
+      <input type="button" onClick="checkAllBox(false)" value="このボタンを押すと全解除されます">
+      <br>
+      <p>コンセントの有無</p>
+      <input id="sample1" value="1" name="kodaira" type="checkbox" onclick="konsento1();" checked><label for="sample1">コンセントあり</label>
+      <input id="sample2" value="1" name="kodaira" type="checkbox" onclick="konsento2();" checked><label for="sample2">コンセントなし</label>
+      <p>現在地からの距離</p>
+      <input id="sample3" value="1" name="kodaira" type="checkbox" onclick="t500m();" checked><label for="sample3">500M以内</label>
+      <input id="sample4" value="1" name="kodaira" type="checkbox" onclick="t1km();" checked><label for="sample4">1KM以内</label>
+      <input id="sample5" value="1" name="kodaira" type="checkbox" onclick="t2km();" checked><label for="sample5">2KM以内</label>
+      <p>個室の有無</p>
+      <input id="sample6" value="1" name="kodaira" type="checkbox" onclick="koshitsu1();" checked><label for="sample6">個室あり</label>
+      <input id="sample7" value="1" name="kodaira" type="checkbox" onclick="koshitsu2();" checked><label for="sample7">個室なし</label>
+      <p>お店の種類</p>
+      <input id="sample8" value="1" name="kodaira" type="checkbox" onclick="cafe1();" checked><label for="sample8">カフェ</label>
+      <input id="sample9" value="1" name="kodaira" type="checkbox" onclick="famires1();" checked><label for="sample9">ファミレス</label>
+      <input id="sample10" value="1" name="kodaira" type="checkbox" onclick="netcafe1();" checked><label for="sample10">ネットカフェ</label>
+      <input id="sample11" value="1" name="kodaira" type="checkbox" onclick="karaoke1();" checked><label for="sample11">カラオケ</label>
+      <p>価格帯</p>
+      <input id="sample12" value="1" name="kodaira" type="checkbox" onclick="level2();" checked><label for="sample12">普通</label>
+      <input id="sample13" value="1" name="kodaira" type="checkbox" onclick="level3();" checked><label for="sample13">少し高め</label>
+      <input id="sample14" value="1" name="kodaira" type="checkbox" onclick="others();" checked><label for="sample14">その他</label>
+    </div>
+    <script>
+        const checkbox3 = document.getElementsByName("kodaira")
+
+        function checkAllBox(trueOrFalse) {
+          for(i = 0; i < checkbox3.length; i++) {
+            checkbox3[i].checked = trueOrFalse
+          }
+        }
+     </script>
   </body>
 </html>
 
