--- a/shinjuku.html
+++ b/shinjuku.html
@@ -31,24 +31,24 @@
       <input type="button" onClick="checkAllBox(false)" value="このボタンを押すと全解除されます">
       <br>
       <p>コンセントの有無</p>
-      <input id="sample1" value="1" name="shinjuku" type="checkbox" onclick="konsento1();" checked><label for="sample1">コンセントあり</label>
-      <input id="sample2" value="1" name="shinjuku" type="checkbox" onclick="konsento2();" checked><label for="sample2">コンセントなし</label>
+      <input id="sample41" value="1" name="shinjuku" type="checkbox" onclick="konsento5();" checked><label for="sample41">コンセントあり</label>
+      <input id="sample42" value="1" name="shinjuku" type="checkbox" onclick="konsento6();" checked><label for="sample42">コンセントなし</label>
       <p>現在地からの距離</p>
-      <input id="sample3" value="1" name="shinjuku" type="checkbox" onclick="t500m();" checked><label for="sample3">500M以内</label>
-      <input id="sample4" value="1" name="shinjuku" type="checkbox" onclick="t1km();" checked><label for="sample4">1KM以内</label>
-      <input id="sample5" value="1" name="shinjuku" type="checkbox" onclick="t2km();" checked><label for="sample5">2KM以内</label>
+      <input id="sample43" value="1" name="shinjuku" type="checkbox" onclick="s100m();" checked><label for="sample43">100M以内</label>
+      <input id="sample44" value="1" name="shinjuku" type="checkbox" onclick="s200m();" checked><label for="sample44">200M以内</label>
+      <input id="sample45" value="1" name="shinjuku" type="checkbox" onclick="s300m();" checked><label for="sample45">300M以内</label>
       <p>個室の有無</p>
-      <input id="sample6" value="1" name="shinjuku" type="checkbox" onclick="koshitsu1();" checked><label for="sample6">個室あり</label>
-      <input id="sample7" value="1" name="shinjuku" type="checkbox" onclick="koshitsu2();" checked><label for="sample7">個室なし</label>
+      <input id="sample46" value="1" name="shinjuku" type="checkbox" onclick="koshitsu5();" checked><label for="sample46">個室あり</label>
+      <input id="sample47" value="1" name="shinjuku" type="checkbox" onclick="koshitsu6();" checked><label for="sample47">個室なし</label>
       <p>お店の種類</p>
-      <input id="sample8" value="1" name="shinjuku" type="checkbox" onclick="cafe1();" checked><label for="sample8">カフェ</label>
-      <input id="sample9" value="1" name="shinjuku" type="checkbox" onclick="famires1();" checked><label for="sample9">ファミレス</label>
-      <input id="sample10" value="1" name="shinjuku" type="checkbox" onclick="netcafe1();" checked><label for="sample10">ネットカフェ</label>
-      <input id="sample11" value="1" name="shinjuku" type="checkbox" onclick="karaoke1();" checked><label for="sample11">カラオケ</label>
+      <input id="sample48" value="1" name="shinjuku" type="checkbox" onclick="cafe3();" checked><label for="sample48">カフェ</label>
+      <input id="sample49" value="1" name="shinjuku" type="checkbox" onclick="famires3();" checked><label for="sample49">ファミレス</label>
+      <input id="sample50" value="1" name="shinjuku" type="checkbox" onclick="netcafe3();" checked><label for="sample50">ネットカフェ</label>
+      <input id="sample51" value="1" name="shinjuku" type="checkbox" onclick="karaoke3();" checked><label for="sample51">カラオケ</label>
       <p>価格帯</p>
-      <input id="sample12" value="1" name="shinjuku" type="checkbox" onclick="level2();" checked><label for="sample12">普通</label>
-      <input id="sample13" value="1" name="shinjuku" type="checkbox" onclick="level3();" checked><label for="sample13">少し高め</label>
-      <input id="sample14" value="1" name="shinjuku" type="checkbox" onclick="others();" checked><label for="sample14">その他</label>
+      <input id="sample52" value="1" name="shinjuku" type="checkbox" onclick="level2s();" checked><label for="sample52">普通</label>
+      <input id="sample53" value="1" name="shinjuku" type="checkbox" onclick="level3s();" checked><label for="sample53">少し高め</label>
+      <input id="sample54" value="1" name="shinjuku" type="checkbox" onclick="otherss();" checked><label for="sample54">その他</label>
     </div>
     <script>
         const checkbox3 = document.getElementsByName("shinjuku")
