--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<header class="site-header">
-    		<h1 class="site-logo"><img src="images/logo.png" alt="つだマップ"></h1>
+    		<h1 class="site-logo"><alt="つだマップ"></h1>
     		<nav class="gnav">
         		<ul class="gnav__menu">
             		<li class="gnav__menu__item"><a href="kodaira.html">小平キャンパス</a></li>
@@ -21,6 +21,9 @@
 		<div class="hero"><img src="3388477_l.jpg" alt="hero"></div>
 		<div class="content">
 		</div>
+		<h2>概要</h2>
+		<h2>使い方</h2>
+		<h2>製作者について</h2>
 		<footer class="site-footer">
     		<p class="copyright">@2021 kishi_4seminar</p>
 		</footer>
