--- a/shinjuku.html
+++ b/shinjuku.html
@@ -44,10 +44,9 @@
       <p>お店の種類</p>
       <input id="sample48" value="1" name="shinjuku" type="checkbox" onclick="cafe();" checked><label for="sample48">カフェ</label>
       <input id="sample49" value="1" name="shinjuku" type="checkbox" onclick="famires();" checked><label for="sample49">ファミレス</label>
-      <input id="sample51" value="1" name="shinjuku" type="checkbox" onclick="hamburger();" checked><label for="sample51">カラオケ</label>
+      <input id="sample55" value="1" name="shinjuku" type="checkbox" onclick="hamburger();" checked><label for="sample55">ハンバーガー</label>
       <input id="sample51" value="1" name="shinjuku" type="checkbox" onclick="karaoke();" checked><label for="sample51">カラオケ</label>
       <input id="sample50" value="1" name="shinjuku" type="checkbox" onclick="netcafe();" checked><label for="sample50">ネットカフェ</label>
-      <input id="sample51" value="1" name="shinjuku" type="checkbox" onclick="karaoke();" checked><label for="sample51">カラオケ</label>
       <p>価格帯</p>
       <input id="sample52" value="1" name="shinjuku" type="checkbox" onclick="level2s();" checked><label for="sample52">普通</label>
       <input id="sample53" value="1" name="shinjuku" type="checkbox" onclick="level3s();" checked><label for="sample53">少し高め</label>
