--- a/shinjuku.html
+++ b/shinjuku.html
@@ -6,6 +6,13 @@
     <title>新宿</title>
   </head>
   <body>
+    <script>
+      function loadFinished(){
+      alert('Load');
+      }
+      window.onload = loadFinished;
+    </script>
+    
     <center>
       <button onclick="location.href='index.html'">ホーム</button>
       　<button onclick="location.href='kodaira.html'">小平キャンパス周辺</button>
