--- a/shinjuku.html
+++ b/shinjuku.html
@@ -43,7 +43,7 @@
       <form action="">
       <p>コンセントの有無</p>
       <input id="sample41" value="1" name="shinjuku" type="checkbox" checked><label for="sample41">コンセントあり</label>
-      <input id="sample42" value="1" name="shinjuku" type="checkbox" onclick="konsento6();" checked><label for="sample42">コンセントなし</label>
+      <input id="sample42" value="1" name="shinjuku" type="checkbox" checked><label for="sample42">コンセントなし</label>
       <p>現在地からの距離</p>
       <input id="sample43" value="1" name="shinjuku" type="checkbox" onclick="s100m();" checked><label for="sample43">100M以内</label>
       <input id="sample44" value="1" name="shinjuku" type="checkbox" onclick="s200m();" checked><label for="sample44">200M以内</label>
@@ -52,11 +52,11 @@
       <input id="sample46" value="1" name="shinjuku" type="checkbox" onclick="koshitsu5();" checked><label for="sample46">個室あり</label>
       <input id="sample47" value="1" name="shinjuku" type="checkbox" onclick="koshitsu6();" checked><label for="sample47">個室なし</label>
       <p>お店の種類</p>
-      <input id="sample48" value="1" name="shinjuku" type="checkbox" onclick="cafe();" checked><label for="sample48">カフェ</label>
-      <input id="sample49" value="1" name="shinjuku" type="checkbox" onclick="famires();" checked><label for="sample49">ファミレス</label>
-      <input id="sample55" value="1" name="shinjuku" type="checkbox" onclick="hamburger();" checked><label for="sample55">ハンバーガー</label>
-      <input id="sample51" value="1" name="shinjuku" type="checkbox" onclick="karaoke();" checked><label for="sample51">カラオケ</label>
-      <input id="sample50" value="1" name="shinjuku" type="checkbox" onclick="netcafe();" checked><label for="sample50">ネットカフェ</label>
+      <input id="sample48" value="1" name="shinjuku" type="checkbox" checked><label for="sample48">カフェ</label>
+      <input id="sample49" value="1" name="shinjuku" type="checkbox" checked><label for="sample49">ファミレス</label>
+      <input id="sample55" value="1" name="shinjuku" type="checkbox" checked><label for="sample55">ハンバーガー</label>
+      <input id="sample51" value="1" name="shinjuku" type="checkbox" checked><label for="sample51">カラオケ</label>
+      <input id="sample50" value="1" name="shinjuku" type="checkbox" checked><label for="sample50">ネットカフェ</label>
       <p>価格帯</p>
       <input id="sample52" value="1" name="shinjuku" type="checkbox" onclick="level2s();" checked><label for="sample52">普通</label>
       <input id="sample53" value="1" name="shinjuku" type="checkbox" onclick="level3s();" checked><label for="sample53">少し高め</label>
