--- a/shinjuku.html
+++ b/shinjuku.html
@@ -61,6 +61,8 @@
       <input id="sample52" value="1" name="shinjuku" type="checkbox" onclick="level2s();" checked><label for="sample52">普通</label>
       <input id="sample53" value="1" name="shinjuku" type="checkbox" onclick="level3s();" checked><label for="sample53">少し高め</label>
       <input id="sample54" value="1" name="shinjuku" type="checkbox" onclick="otherss();" checked><label for="sample54">その他</label>
+      <br>
+      <input type="submit" value="送信する">
       </form>
     </div>
     <script>
