--- a/shinjuku.html
+++ b/shinjuku.html
@@ -62,7 +62,7 @@
       <input id="sample53" value="1" name="shinjuku" type="checkbox" onclick="level3s();" checked><label for="sample53">少し高め</label>
       <input id="sample54" value="1" name="shinjuku" type="checkbox" onclick="otherss();" checked><label for="sample54">その他</label>
       <br>
-      <input type="submit" value="送信する">
+      <button id="btn">送信</button>
       </form>
     </div>
     <script>
