--- a/shinjuku.html
+++ b/shinjuku.html
@@ -62,7 +62,7 @@
       <input id="sample53" value="1" name="shinjuku" type="checkbox" onclick="level3s();" checked><label for="sample53">少し高め</label>
       <input id="sample54" value="1" name="shinjuku" type="checkbox" onclick="otherss();" checked><label for="sample54">その他</label>
       <br><br>
-      <button id="btn">送信</button>
+      <button onclick="clickEvent()">送信</button>
       <br>
       </form>
       <br>
@@ -74,6 +74,13 @@
           for(i = 0; i < checkbox3.length; i++) {
             checkbox3[i].checked = trueOrFalse
           }
+        }
+        function clickEvent(){
+          cafe();
+          famires();
+          hamburger(); 
+          karaoke();
+          netcafe();
         }
      </script>
   </body>
