--- a/shinjuku.html
+++ b/shinjuku.html
@@ -76,11 +76,26 @@
           }
         }
         function clickEvent(){
-          cafe();
-          famires();
-          hamburger(); 
-          karaoke();
-          netcafe();
+          const sample48 = document.getElementById("sample48");
+          const sample49 = document.getElementById("sample49");
+          const sample55 = document.getElementById("sample55");
+          const sample51 = document.getElementById("sample51");
+          const sample50 = document.getElementById("sample50");
+          if(sample48.checked){
+            cafe();
+          }
+          if(sample49.checked){
+            famires();
+          }
+          if(sample55.checked){
+            hamburger();
+          }
+          if(sample51.checked){
+            karaoke();
+          }
+          if(sample50.checked){
+            netcafe();
+          }
         }
      </script>
   </body>
