--- a/shinjuku.html
+++ b/shinjuku.html
@@ -9,14 +9,14 @@
     <script type="text/javascript" src="shop_list/shinjuku_data.js"></script>
     <script type="text/javascript" src="./shinjuku_map.js"></script>
     <script>
-      function loadFinished(){
-        cafe();
-        famires();
-        hamburger(); 
-        karaoke();
-        netcafe();
-      }
-      window.onload = loadFinished;
+      //function loadFinished(){
+        //cafe();
+        //famires();
+        //hamburger(); 
+        //karaoke();
+        //netcafe();
+      //}
+      //window.onload = loadFinished;
     </script>
     
     <center>
