--- a/shinjuku.html
+++ b/shinjuku.html
@@ -37,8 +37,8 @@
       <br><br>
       <h3>絞り込み条件</h3>
       <br>
-      <input type="button" onClick="checkAllBox(true)" value="このボタンを押すと全選択されます">
-      <input type="button" onClick="checkAllBox(false)" value="このボタンを押すと全解除されます">
+      <input type="button" onClick="checkAllBox(true)" value="全選択">
+      <input type="button" onClick="checkAllBox(false)" value="全解除">
       <br>
       <form action="">
       <p>コンセントの有無</p>
@@ -62,7 +62,7 @@
       <input id="sample53" value="1" name="shinjuku" type="checkbox" onclick="level3s();" checked><label for="sample53">少し高め</label>
       <input id="sample54" value="1" name="shinjuku" type="checkbox" onclick="otherss();" checked><label for="sample54">その他</label>
       <br><br>
-      <button onclick="clickEvent()">送信</button>
+      <button onclick="clickEvent()">条件変更</button>
       <br>
       </form>
       <br>
