--- a/shinjuku.html
+++ b/shinjuku.html
@@ -62,9 +62,9 @@
       <input id="sample53" value="1" name="shinjuku" type="checkbox" onclick="level3s();" checked><label for="sample53">少し高め</label>
       <input id="sample54" value="1" name="shinjuku" type="checkbox" onclick="otherss();" checked><label for="sample54">その他</label>
       <br><br>
-      <button onclick="clickEvent()">条件変更</button>
-      <br>
       </form>
+      <input type="button" value="ボタン" onclick="clickEvent()" >送信</input>
+      <br>
       <br>
     </div>
     <script>
