--- a/shinjuku.html
+++ b/shinjuku.html
@@ -77,7 +77,7 @@
         }
         function clickEvent(){
           
-          marker.setMap(null);
+          //marker.setMap(null);
           
           const sample48 = document.getElementById("sample48");
           const sample49 = document.getElementById("sample49");
