--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
 		</div>
 		<h2>概要</h2>
 		<h2>使い方</h2>
+			<p>1.表示したい地域のボタンをクリック<br>
+			2.除外する条件のチェックボックスを外す<br>
+			3.条件変更ボタンを押す
+			</p>
 		<h2>製作者について</h2>
+			<p>津田塾大学学芸学部情報科学科4年来住ゼミ3班</p>
 		<footer class="site-footer">
     		<p class="copyright">@2021 kishi_4seminar</p>
 		</footer>
