--- a/shinjuku.html
+++ b/shinjuku.html
@@ -86,10 +86,10 @@
           const sample51 = document.getElementById("sample51");
           const sample50 = document.getElementById("sample50");
           if(sample48.checked){
-            cafe(1);
-          }else{
-            cafe(0);
-          }
+            cafe();
+          }//else{
+            //cafe(0);
+          //}
           //if(sample49.checked){
             //famires();
           //}
