--- a/kodaira.html
+++ b/kodaira.html
@@ -52,6 +52,7 @@
       <input id="sample14" value="1" name="kodaira" type="checkbox" onclick="others();" checked><label for="sample14">その他</label>
     </div>
     <script>
+        //checkboxの全選択と全解除
         const checkbox3 = document.getElementsByName("kodaira")
 
         function checkAllBox(trueOrFalse) {
