--- a/shinjuku.html
+++ b/shinjuku.html
@@ -88,9 +88,9 @@
           const sample51 = document.getElementById("sample51");
           const sample50 = document.getElementById("sample50");
          
-          if(sample48.checked){
-            cafe();
-          }//else{
+          //if(sample48.checked){
+            //cafe();
+          //}else{
             //cafe(0);
           //}
           //if(sample49.checked){
