--- a/shinjuku.html
+++ b/shinjuku.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css" >
+    <!-- <link rel="stylesheet" href="style.css" > -->
     <title>新宿</title>
   </head>
   <body>
