--- a/kokubunji.html
+++ b/kokubunji.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css" >
+    <!-- <link rel="stylesheet" href="style.css" > -->
     <title>国分寺</title>
   </head>
   <body>
